--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,8 @@
 % \documentclass[type=bachelor,infoleft=true]{hitszthesis}
 
 % 模板提供以下选项，各个选项之间不要有空格
+% 新. isessay=true|false
+%   含义：本科毕业论文/设计，默认为 true（毕业论文）
 % 1. type=bachelor|master|doctor
 %   含义：本科、硕士、博士学位论文，不设默认值，**必填**
 % 2. covertitletworow=true|false
