--- a/front/coverinformation.tex
+++ b/front/coverinformation.tex
@@ -22,26 +22,26 @@
   %=========
   % 中文信息
   %=========
-  ctitleone={局部多孔质气体静压轴承},%本科生封面使用
-  ctitletwo={关键技术的研究},%本科生封面使用
-  ctitlecover={局部多孔质气体静压轴承关键技术的研究},%放在封面中使用，自由断行
-  ctitle={局部多孔质气体静压轴承关键技术的研究},%放在原创性声明中使用
+  ctitleone={复杂环境下无人机编队},%本科生封面使用
+  ctitletwo={避障轨迹规划方法研究},%本科生封面使用
+  ctitlecover={复杂环境下无人机编队避障轨迹规划方法研究},%放在封面中使用，自由断行
+  ctitle={复杂环境下无人机编队避障轨迹规划方法研究},%放在原创性声明中使用
   csubtitle={一条副标题}, %一般情况没有，可以注释掉
   cxueke={工学},
   cpostgraduatetype={学术},
-  csubject={机械设计制造及其自动化},
+  csubject={自动化},
   % csubject={机械工程},
-  caffil={机电工程与自动化学院},
+  caffil={机器人与先进制造学院},
   % caffil={哈尔滨工业大学（深圳）},
-  cauthor={杨敬轩},
-  csupervisor={某某某 教授},
+  cauthor={吴俊达},
+  csupervisor={梅杰 教授},
   % cassosupervisor={某某某 教授}, % 副导师
   % ccosupervisor={某某某 教授}, % 合作导师
   % 日期自动使用当前时间，若需指定按如下方式修改：
-  cdate={2023年6月},
+  cdate={2025年3月},
   % 指定第二页封面的日期，即答辩日期
-  cdatesecond={2023年06月09日},
-  cstudentid={SZ160310217},
+  cdatesecond={2025年03月03日},
+  cstudentid={210320621},
   cstudenttype={同等学力人员}, %非全日制教育申请学位者
   %（同等学力人员）、（工程硕士）、（工商管理硕士）、
   %（高级管理人员工商管理硕士）、（公共管理硕士）、（中职教师）、（高校教师）等
